--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Sugar</title>
+    <link rel="icon" href="src/components/img/logo.ico" type="image/x-icon">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
